2020-05-09  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Added 'Last Commit' and 'RJournal' badges

2019-05-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Roll minor release

	* inst/CITATION: Added citation information

	* README.md: Mention R Journal paper

2018-11-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Release 0.2.3

	* src/rcppmsgpack_c_functions.cpp (c_unpack): Use size_t

2018-11-17  Dirk Eddelbuettel  <edd@debian.org>

	* src/rcppmsgpack_c_functions.cpp: Prefix as<>() calls with Rcpp as
	Solaris cannot resolve them; also change some u_int32_t to uint32_t

	* src/anyvector.h: Prefix all Rcpp types with Rcpp::
	* src/rcppmsgpack_c_functions.cpp: Idem

2018-06-29  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Roll minor release

	* src/example1.cpp (arrayEx): Minor update from upstream to suppress
	a compiler warning about potentially unintialzed object

	* src/rcppmsgpack_c_functions.cpp (unpackVector): Change several
	indices to unsigned int, and parentheses to two logical expressions

2018-06-21  Travers Ching  <traversc@gmail.com>

	* src/rcppmsgpack_c_functions.cpp: Adding msgpack_read and
	msgpack_write plus other small improvements
	* R/functions.R: Idem
	* man/msgpack_read.Rd: Documentation
	* man/msgpack_write.Rd: Idem
	* tests/tests.r: New tests

2018-05-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Release 0.2.2

	* inst/include/msgpack/v1/object.hpp (<<): Carry over a static_cast<>
	from upstream to suppress a new warning from g++-8.1 [CRAN request]

2018-01-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Release 0.2.1

	* inst/COPYRIGHTS (Copyright): Added two entries [CRAN request]
	* inst/AUTHORS: Also added here

2018-01-14  Dirk Eddelbuettel  <edd@debian.org>

	* src/rcppmsgpack_c_functions.cpp (c_timestamp_encode): Make
	Windows happy and use uint32_t here as well
