@@ -1,3 +1,7 @@
+2021-01-10  Dirk Eddelbuettel  <edd@debian.org>
+
+        * .github/workflows/ci.yaml: Add CI runner using r-ci
+
 2020-05-09  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md: Added 'Last Commit' and 'RJournal' badges
